[Bug #19862] Skip compiled result of never reachable expression